feat: 2, 3강 내용 추가

--- a/yeeun/1.GCD.md
+++ b/yeeun/1.GCD.md
@@ -23,12 +23,39 @@ queue.async {
 
 
 
-### ₩GCD
+### GCD
 
 > Grand Central Dispatch = 디스패치큐
 
 - 간단한 일
+
 - 함수를 사용하는 작업 (메소드 위주)
+
+- main, global private(custom) queue 존재
+
+  - main: 유일한 한개, 시리얼, 메인 스레드
+
+  - global: 여러개 종류 존재. 기본 설정은 Concurrent, QoS (6종류)
+
+    - userInteractive: 유저와 직접적인 인터렉티브 (UI업데이트, 애니메이션, UI 반응 관련) (거의 즉시)
+
+    - userInitiated: 유저가 즉시 필요하긴 하지만, 비동기적으로 처리된 작업 ex) 앱 내에서 pdf 파일 열기 (몇초)
+
+    - Default: 일반적인 작업
+
+    - utility: progress indicator와 함께 길게 실행되는 작업, 계산, IO, Networking, 지속적인 데이터 feeds (몇초에서 몇분)
+
+    - background: 유저가 직접적으로 인지하지 않는 작업, 데이터 미리 가지고오기, 데이터베이스 유지 등 (속도보다는 에너지 효율성 중시, 몇분 이상)
+
+    - Unspecified: legacy API
+
+      **Async에 우선순위가 높은 QoS를 사용하는 경우 QoS 레벨 상승**
+
+  - private: 디폴트 설정 serial, QoS/Concurrent 설정 가능
+
+    - let queue = DispatchQueue(label: "com.inflearn.serial")과 같이 label을 붙힘
+    - 커스텀 / 프라이빗 큐는 동시큐로 설정 가능 (attribute 속성 사용)
+
 
 
 
@@ -43,6 +70,8 @@ queue.async {
 - 취소 / 순서지정 / 일시중지 (상태 추적)
 
   (GCD에서 할 수 없는 여러가지 연산 수행)
+  
+- Operation Queue: .background/Concurrent 상태가 디폴트, 디스패치 큐의 영향을 받음 
 
 
 
@@ -89,3 +118,43 @@ queue.async {
 - 각자 독립적이지만 유사한 여러개의 작업을 처리할 때 사용
 
   
+
+## 디스패치큐 사용시 주의해야할 사항
+
+### 반드시 메인 큐에서 처리해야하는 작업
+
+- UI 관련 일들은 "메인 큐"에서 처리해야함
+
+
+
+### Sync 메서드에 대한 주의사항
+
+- 메인 큐에서는 다른 큐로 보낼 때 sync 메서드를 부르면 안된다. 
+- 메인 큐에서는 항상 비동기적으로 보내야한다.
+- UI와 관련되지 않은 오래걸리는 작업들은 다른 쓰레드에서 일을할 수 있도록 비동기적으로 실행하여야 하며, 동기적으로 시키면 UI가 멈춤
+- 현재의 큐에서 현재의 큐로 "동기적으로" 보내서는 안된다
+- 현재의 큐를 블락하는 동시에 다시 현재의 큐에 접근하기 때문에 교착상황이 발생한다.
+
+
+
+### Weak, Strong 캡처 주의
+
+- weak: 뷰컨이 없어지면 큐로 보낸 클로저 (작업)도 중단
+- strong: 뷰턴이 없어져도 여전히 동작.
+
+
+
+### (비동기 작업에서) 컴플리션 핸들러의 존재 이유
+
+- 비동기 작업의 끝지점을 알기 위해서 
+
+
+
+### 동기적 함수를 비동기 함수처럼 만드는 이유
+
+- 여러번의 재활용을 위해 동기적 함수를 비동기 함수처럼 생성
+
+  
+
+
+
