--- a/yeeun/Week2/2. DispatchGroup.md
+++ b/yeeun/Week2/2. DispatchGroup.md
@@ -20,7 +20,7 @@
 
 
 
-예) 여러 애니메이션 효과가 겹쳐저 있을 때, 애니메이션이모두 종료된 시점을 알고 싶음
+예) 여러 애니메이션 효과가 겹쳐저 있을 때, 애니메이션이 모두 종료된 시점을 알고 싶음
 
 런치 스크린에서 앱의 첫 화면에 이동할 때 특정 이미지들을 다운로드 받지 못한 경우
 
@@ -203,4 +203,48 @@ DispatchSemaphore
 ![스크린샷 2022-05-18 오후 6.21.45](/Users/heoyeeun/Library/Application Support/typora-user-images/스크린샷 2022-05-18 오후 6.21.45.png)
 
 
+
+## Concurrency Problem
+
+> 2개 이상의 스레드를 사용하면서, 동일한 메모리 접근 등으로 인해 발생할 수 있는 문제
+
+​	<-> Thread Safety: 동시적 처리를 하면서도 문제없이 스레드를 안전하게 사용
+
+​	데이터 (객체나 변수 등)에 여러 스레드를 사용하여 접근하여도, 한번에 한개의 스레드만 접근 가능하도록 처리하여 경쟁상황에 문제 	없이 사용
+
+
+
+### 1. Race Condition
+
+```swift
+var a = 1
+
+DispatchQueue.global().async {
+	sleep(1)
+	a += 1
+}
+
+DispatchQueue.global().async {
+	sleep(1)
+	a+=1
+}
+
+// 여러개의 스레드에서 a라는 변수에 접근
+
+print(a)
+```
+
+<img src="/Users/heoyeeun/Library/Application Support/typora-user-images/스크린샷 2022-05-19 오후 5.56.39.png" alt="스크린샷 2022-05-19 오후 5.56.39" style="zoom:50%;" />
+
+=> 두개 이상의 스레드가 한 곳의 메모리 (저장 공간)에 동시에 접근하여 값을 사용하려고 할 때 문제가 발생할 수 있다.
+
+
+
+### 2. Deadlocks
+
+
+
+
+
+### 3. Priority Inversion
 
